--- a/src/app/usit/components/reports/employee-reports/employee-reports.component.html
+++ b/src/app/usit/components/reports/employee-reports/employee-reports.component.html
@@ -58,6 +58,10 @@
 
   <mat-card class="matcards " >
     <mat-card-content>
+      <div class="search-container">
+          <input matInput type="search" placeholder="Search consultant" [(ngModel)]="searchQuery" (input)="filterData()" class="searchconsultant">
+          
+      </div>
       <div id="table-container" class="table-wrapper"  >
         <section class="section">
           <div class="row scroll" style="height:500px;">
@@ -80,7 +84,7 @@
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let data of c_data let i=index">
+                <tr *ngFor="let data of filteredData let i=index">
                   <td let i=index nowrap>{{ generateSerialNumber(i)}}</td>
                   <!-- <td *ngIf="groupby=='employee'"> [ngClass]="{'lesthan': (data.submission <=10 )}"
                                   <a  (click)="drilldown(data.id,'employee')" data-bs-toggle="modal"
@@ -165,13 +169,12 @@
         </section>
       </div>
 
-      <div class="paginator">
-        <!-- paginator -->
+      <!-- <div class="paginator">
         <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false"
           [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
           [hidePageSize]="true" [pageIndex]="currentPageIndex" aria-label="Select page">
         </mat-paginator>
-      </div>
+      </div> -->
 
     </mat-card-content>
   </mat-card >
