--- a/src/app/usit/components/sales/submission-list/submission-list.component.html
+++ b/src/app/usit/components/sales/submission-list/submission-list.component.html
@@ -58,14 +58,32 @@
                     <td mat-cell *matCellDef="let element" nowrap> {{element?.createddate | date:'MM-dd-yyyy HH:mm'}} </td>
                 </ng-container>
                 <!-- ID-->
-                <ng-container matColumnDef="Id">
+                <!-- <ng-container matColumnDef="Id">
                     <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by ID" mat-sort-header> Submission
                         ID </th>
                     <td mat-cell *matCellDef="let element">
                         {{element?.subno}}
-                        <!-- <span class="subno"
-                            (click)="goToSubmissionInfo(element, 'id')">{{element?.subno}}
-                        </span>  -->
+                     
+                    </td>
+                </ng-container> -->
+                <ng-container matColumnDef="Id">
+                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Id" mat-sort-header>
+                        Submission ID
+                    </th>
+                    <td mat-cell *matCellDef="let element">
+                        <ng-container *ngIf="this.flag == 'Recruiting'; then trueCondition else elseTemplate"></ng-container>
+                        <ng-container *ngIf="this.flag === 'Domrecruiting'; then anotherCondition"></ng-container>
+                        <ng-template #trueCondition>
+                            <span class="consultant-id" (click)="goToReqInfo(element)">{{ element?.subno }}
+                            </span>
+                        </ng-template>
+                        <ng-template #anotherCondition>
+                            <span class="consultant-id" (click)="goToReqInfo(element)">{{ element?.subno }}
+                            </span>
+                        </ng-template>
+                        <ng-template #elseTemplate>
+                            {{ element?.position | titlecase}}
+                        </ng-template>
                     </td>
                 </ng-container>
                 <!-- Name-->
@@ -95,7 +113,7 @@
 
                 </ng-container> -->
                 <!-- Requirement-->
-                <ng-container matColumnDef="Requirement">
+                <!-- <ng-container matColumnDef="Requirement">
                     <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Requirement" mat-sort-header>
                         Requirement
                     </th>
@@ -114,8 +132,13 @@
                             {{ element?.position | titlecase}}
                         </ng-template>
                     </td>
+                </ng-container> -->
+                <ng-container matColumnDef="Position">
+                    <th mat-header-cell *matHeaderCellDef 
+                        sortActionDescription="Sort by Position" mat-sort-header> Position</th>
+                    <td mat-cell *matCellDef="let element"> {{element?.position|titlecase}}
+                    </td>
                 </ng-container>
-
                   <!-- Vendor Location -->
                   <ng-container matColumnDef="Vendor">
                     <th mat-header-cell *matHeaderCellDef 
