--- a/src/app/usit/components/employee-list/add-employee/add-employee.component.html
+++ b/src/app/usit/components/employee-list/add-employee/add-employee.component.html
@@ -61,6 +61,7 @@
             Contact
             Number is required</mat-error>
         </mat-form-field>
+        
         <!-- company contact -->
         <mat-form-field appearance="fill">
           <mat-label>Company Contact Number</mat-label>
@@ -69,6 +70,8 @@
             name="companycontactnumber" id="intlInputCompany" #companycontactnumber (keypress)="onlyNumberKey($event)">
           </ngx-mat-intl-tel-input>
         </mat-form-field>
+
+        
         <!-- Joining Date -->
         <mat-form-field appearance="fill">
           <mat-label>Joining Date</mat-label>
@@ -139,6 +142,34 @@
           <input matInput formControlName="branch" maxlength="50" (input)="camelCase($event)">
           <mat-error *ngIf="employeeForm.get('branch').hasError('required')">Branch Name is required</mat-error>
         </mat-form-field>
+
+        <!-- <div formGroupName="role" class="select-role-field" *ngIf="false">
+          <mat-form-field appearance="fill" >
+            <mat-label>Select Company</mat-label>
+            <input matInput formControlName="rolename" [matAutocomplete]="companyAuto">
+            <mat-autocomplete #companyAuto="matAutocomplete">
+              <mat-option *ngFor="let option of filteredRoleOptions | async" [value]="option.rolename">
+                {{ option.rolename }}
+              </mat-option>
+            </mat-autocomplete>
+            <mat-error *ngIf="employeeForm.get('role.rolename').hasError('required')">Role is
+              Required</mat-error>
+          </mat-form-field>
+          </div> -->
+          <!-- Select Role with MatSelect -->
+          <!-- <div formGroupName="company" class="select-role-field"> -->
+            <div class="select-role-field" *ngIf="isCompanyToDisplay">
+              <mat-form-field appearance="fill">
+                  <mat-label>Select Company</mat-label>
+                  <mat-select name="company" formControlName="companyid">
+                      <mat-option *ngFor="let option of companyOptions" [value]="option.companyid">
+                          {{ option.companyname }}
+                      </mat-option>
+                  </mat-select>
+                  <mat-error *ngIf="isCompanyToDisplay && employeeForm.get('companyid').hasError('required')">Company is required</mat-error>
+              </mat-form-field>
+          </div>
+
         <!-- Designation -->
         <mat-form-field appearance="fill">
           <mat-label>Designation</mat-label>
