worked on dashboard design

--- a/src/app/usit/components/dashboard/dashboard.component.html
+++ b/src/app/usit/components/dashboard/dashboard.component.html
@@ -1015,11 +1015,12 @@
               </button>
             
               <!-- Next Page Button -->
-              <button mat-icon-button (click)="nextPagedice()" [disabled]="currentPagedice === totalPages">
+              <button mat-icon-button (click)="nextPagedice()" [disabled]="currentPagedice === totalPagesdice">
                 <mat-icon>chevron_right</mat-icon>
               </button>
               
             </div>
+      
           </section>
         </div>
       </form>
@@ -2273,7 +2274,7 @@
                 </button>
               
                 <!-- Next Page Button -->
-                <button mat-icon-button (click)="nextPagedice()" [disabled]="currentPagedice === totalPages">
+                <button mat-icon-button (click)="nextPagedice()" [disabled]="currentPagedice === totalPagesdice">
                   <mat-icon>chevron_right</mat-icon>
                 </button>
                 
@@ -2444,7 +2445,7 @@
               </button>
             
               <!-- Next Page Button -->
-              <button mat-icon-button (click)="nextPagedice()" [disabled]="currentPagedice === totalPages">
+              <button mat-icon-button (click)="nextPagedice()" [disabled]="currentPagedice === totalPagesdice">
                 <mat-icon>chevron_right</mat-icon>
               </button>
               
@@ -3251,7 +3252,7 @@
                 </button>
               
                 <!-- Next Page Button -->
-                <button mat-icon-button (click)="nextPagedice()" [disabled]="currentPagedice === totalPages">
+                <button mat-icon-button (click)="nextPagedice()" [disabled]="currentPagedice === totalPagesdice">
                   <mat-icon>chevron_right</mat-icon>
                 </button>
                 
@@ -3419,7 +3420,7 @@
               </button>
             
               <!-- Next Page Button -->
-              <button mat-icon-button (click)="nextPagedice()" [disabled]="currentPagedice === totalPages">
+              <button mat-icon-button (click)="nextPagedice()" [disabled]="currentPagedice === totalPagesdice">
                 <mat-icon>chevron_right</mat-icon>
               </button>
               
@@ -4133,7 +4134,7 @@
               </button>
             
               <!-- Next Page Button -->
-              <button mat-icon-button (click)="nextPagedice()" [disabled]="currentPagedice === totalPages">
+              <button mat-icon-button (click)="nextPagedice()" [disabled]="currentPagedice === totalPagesdice">
                 <mat-icon>chevron_right</mat-icon>
               </button>
               
@@ -4845,7 +4846,7 @@
               </button>
             
               <!-- Next Page Button -->
-              <button mat-icon-button (click)="nextPagedice()" [disabled]="currentPagedice === totalPages">
+              <button mat-icon-button (click)="nextPagedice()" [disabled]="currentPagedice === totalPagesdice">
                 <mat-icon>chevron_right</mat-icon>
               </button>
               
@@ -5457,7 +5458,7 @@
               </button>
             
               <!-- Next Page Button -->
-              <button mat-icon-button (click)="nextPagedice()" [disabled]="currentPagedice === totalPages">
+              <button mat-icon-button (click)="nextPagedice()" [disabled]="currentPagedice === totalPagesdice">
                 <mat-icon>chevron_right</mat-icon>
               </button>
               
@@ -6168,7 +6169,7 @@
               </button>
             
               <!-- Next Page Button -->
-              <button mat-icon-button (click)="nextPagedice()" [disabled]="currentPagedice === totalPages">
+              <button mat-icon-button (click)="nextPagedice()" [disabled]="currentPagedice === totalPagesdice">
                 <mat-icon>chevron_right</mat-icon>
               </button>
               
