worked on Dashboard

--- a/src/app/usit/components/dashboard/dashboard.component.html
+++ b/src/app/usit/components/dashboard/dashboard.component.html
@@ -753,7 +753,7 @@
             <div class="card-body">
               <h3 class="card-title bold-text">Recent Activity
               </h3>
-              <div class="activity" *ngFor="let data of datarr">
+              <div class="activity" *ngFor="let data of datarr" [ngClass]="{'vms': data.flg == 'VMS', 'sub-sales': data.flg == 'SUB-sales', 'sub-recruiting': data.flg == 'SUB-recruiting' || data.flg == 'SUB-Recruiting', 'sub-domrecruiting': data.flg == 'SUB-domrecruiting', 'submission': data.flg == 'submission', 'interview': data.flg == 'interview'}">
                 <div class="time">
                   {{data.trtime}}
                 </div>
@@ -841,7 +841,10 @@
                   <b> <span *ngIf="data.endclient!=='NULL'" class="bold-text">, {{data.endclient}}(client) </span><span
                       *ngIf="data.implpartner!=='NULL'">, {{data.implpartner}}(IMPL)</span> </b>
                 </div>
+            
               </div>
+
+         
             </div>
           </mat-card>
         </div>
