--- a/src/app/usit/components/dashboard/dashboard.component.scss
+++ b/src/app/usit/components/dashboard/dashboard.component.scss
@@ -305,7 +305,7 @@ mat-typography p {
 
 .mat-mdc-card.activity-card-individual {
   height: 389px;
-  padding: 15px;
+  padding: 20px;
   overflow-y: auto;
 }
 
@@ -331,6 +331,11 @@ a .name {
   flex-direction: row;
   padding-bottom: 5px;
   justify-content: space-between;
+  padding: 15px;
+  margin-bottom: 10px;
+  border-radius: 8px;
+  background: #fff;
+  transition: 0.3s ease-in-out;
 }
 
 .activity .activity-content {
@@ -632,3 +637,38 @@ button {
   width: 20px;
   height: 20px;
 }
+.vms {
+  box-shadow: 0px 4px 10px rgba(0, 123, 255, 0.4); 
+}
+
+.sub-sales {
+  box-shadow: 0px 4px 10px rgba(40, 167, 69, 0.4); 
+}
+
+.sub-recruiting {
+  box-shadow: 0px 4px 10px rgba(255, 193, 7, 0.4); 
+}
+
+.sub-domrecruiting {
+  box-shadow: 0px 4px 10px rgba(220, 53, 69, 0.4); 
+}
+
+.submission {
+  box-shadow: 0px 4px 10px rgba(108, 117, 125, 0.4); 
+}
+
+.interview {
+  box-shadow: 0px 4px 10px rgba(102, 16, 242, 0.4);
+}
+// .paginatorrecent {
+//   position: sticky;
+//   bottom: 0;
+//   width: 100%;
+//   background: white;
+//   display: flex;
+//   justify-content: flex-end; /* Aligns content to the right */
+//   align-items: center;
+//   padding: 10px;
+//   border-top: 1px solid #ddd;
+// }
+
