Worked on Dashboard Recent Activity

--- a/src/app/usit/components/dashboard/dashboard.component.html
+++ b/src/app/usit/components/dashboard/dashboard.component.html
@@ -168,7 +168,7 @@
             <div class="card-body">
               <h3 class="card-title bold-text">Recent Activity
               </h3>
-              <div class="activity" *ngFor="let data of datarr">
+              <div class="activity" *ngFor="let data of datarr" [ngClass]="{'vms': data.flg == 'VMS', 'sub-sales': data.flg == 'SUB-sales', 'sub-recruiting': data.flg == 'SUB-recruiting' || data.flg == 'SUB-Recruiting', 'sub-domrecruiting': data.flg == 'SUB-domrecruiting', 'submission': data.flg == 'submission', 'interview': data.flg == 'interview'}">
                 <div class="time">
                   {{data.trtime}}
                 </div>
@@ -1384,7 +1384,7 @@
             <div class="card-body">
               <h3 class="card-title bold-text">Recent Activity
               </h3>
-              <div class="activity" *ngFor="let data of datarr">
+              <div class="activity" *ngFor="let data of datarr" [ngClass]="{'vms': data.flg == 'VMS', 'sub-sales': data.flg == 'SUB-sales', 'sub-recruiting': data.flg == 'SUB-recruiting' || data.flg == 'SUB-Recruiting', 'sub-domrecruiting': data.flg == 'SUB-domrecruiting', 'submission': data.flg == 'submission', 'interview': data.flg == 'interview'}">
                 <div class="time">
                   {{data.trtime}}
                 </div>
@@ -2023,7 +2023,7 @@
             <div class="card-body">
               <h3 class="card-title bold-text">Recent Activity
               </h3>
-              <div class="activity" *ngFor="let data of datarr">
+              <div class="activity" *ngFor="let data of datarr" [ngClass]="{'vms': data.flg == 'VMS', 'sub-sales': data.flg == 'SUB-sales', 'sub-recruiting': data.flg == 'SUB-recruiting' || data.flg == 'SUB-Recruiting', 'sub-domrecruiting': data.flg == 'SUB-domrecruiting', 'submission': data.flg == 'submission', 'interview': data.flg == 'interview'}">
                 <div class="time">
                   {{data.trtime}}
                 </div>
@@ -3002,7 +3002,7 @@
             <div class="card-body">
               <h3 class="card-title bold-text">Recent Activity
               </h3>
-              <div class="activity" *ngFor="let data of datarr">
+              <div class="activity" *ngFor="let data of datarr" [ngClass]="{'vms': data.flg == 'VMS', 'sub-sales': data.flg == 'SUB-sales', 'sub-recruiting': data.flg == 'SUB-recruiting' || data.flg == 'SUB-Recruiting', 'sub-domrecruiting': data.flg == 'SUB-domrecruiting', 'submission': data.flg == 'submission', 'interview': data.flg == 'interview'}">
                 <div class="time">
                   {{data.trtime}}
                 </div>
@@ -3883,7 +3883,7 @@
             <div class="card-body">
               <h3 class="card-title bold-text">Recent Activity
               </h3>
-              <div class="activity" *ngFor="let data of datarr">
+              <div class="activity" *ngFor="let data of datarr" [ngClass]="{'vms': data.flg == 'VMS', 'sub-sales': data.flg == 'SUB-sales', 'sub-recruiting': data.flg == 'SUB-recruiting' || data.flg == 'SUB-Recruiting', 'sub-domrecruiting': data.flg == 'SUB-domrecruiting', 'submission': data.flg == 'submission', 'interview': data.flg == 'interview'}">
                 <div class="time">
                   {{data.trtime}}
                 </div>
@@ -4597,7 +4597,7 @@
             <div class="card-body">
               <h3 class="card-title bold-text">Recent Activity
               </h3>
-              <div class="activity" *ngFor="let data of datarr">
+              <div class="activity" *ngFor="let data of datarr" [ngClass]="{'vms': data.flg == 'VMS', 'sub-sales': data.flg == 'SUB-sales', 'sub-recruiting': data.flg == 'SUB-recruiting' || data.flg == 'SUB-Recruiting', 'sub-domrecruiting': data.flg == 'SUB-domrecruiting', 'submission': data.flg == 'submission', 'interview': data.flg == 'interview'}">
                 <div class="time">
                   {{data.trtime}}
                 </div>
@@ -5209,7 +5209,7 @@
             <div class="card-body">
               <h3 class="card-title bold-text">Recent Activity
               </h3>
-              <div class="activity" *ngFor="let data of datarr">
+              <div class="activity" *ngFor="let data of datarr" [ngClass]="{'vms': data.flg == 'VMS', 'sub-sales': data.flg == 'SUB-sales', 'sub-recruiting': data.flg == 'SUB-recruiting' || data.flg == 'SUB-Recruiting', 'sub-domrecruiting': data.flg == 'SUB-domrecruiting', 'submission': data.flg == 'submission', 'interview': data.flg == 'interview'}">
                 <div class="time">
                   {{data.trtime}}
                 </div>
@@ -5919,7 +5919,7 @@
             <div class="card-body">
               <h3 class="card-title bold-text">Recent Activity
               </h3>
-              <div class="activity" *ngFor="let data of datarr">
+              <div class="activity" *ngFor="let data of datarr" [ngClass]="{'vms': data.flg == 'VMS', 'sub-sales': data.flg == 'SUB-sales', 'sub-recruiting': data.flg == 'SUB-recruiting' || data.flg == 'SUB-Recruiting', 'sub-domrecruiting': data.flg == 'SUB-domrecruiting', 'submission': data.flg == 'submission', 'interview': data.flg == 'interview'}">
                 <div class="time">
                   {{data.trtime}}
                 </div>
