Worked on Dashboard Daily Requirements

--- a/src/app/usit/components/dashboard/dashboard.component.html
+++ b/src/app/usit/components/dashboard/dashboard.component.html
@@ -850,8 +850,16 @@
         </div>
       </div>
     </div>
-
-    <div *ngIf="privilegeServ.hasPrivilege('REQUIREMENTS_TAGGED_DATA')">
+    <div *ngIf="privilegeServ.hasPrivilege('REQUIREMENTS_TAGGED_DATA')" class="col-12 card" style="margin-top:13px;">
+      <div class="header mat-elevation-z1" (click)="toggleTable()" style="cursor: pointer; display: flex; align-items: center; justify-content: space-between;">
+        <span class="header-text">
+          Daily Requirements
+        </span>
+        <mat-icon>arrow_drop_down</mat-icon>  <!-- Dropdown icon -->
+      </div>
+    </div>
+    
+   <div *ngIf="showTable" style="margin-top:20px;">
       <div class="header mat-elevation-z1">
         <span class="header-text">
           Daily Requirements(Tagged Count) &nbsp;&nbsp;&nbsp;
@@ -2116,7 +2124,15 @@
           </mat-card>
         </div>
       </div>
-      <div *ngIf="privilegeServ.hasPrivilege('REQUIREMENTS_TAGGED_DATA')">
+      <div *ngIf="privilegeServ.hasPrivilege('REQUIREMENTS_TAGGED_DATA')" class="col-12 card" style="margin-top:13px;">
+        <div class="header mat-elevation-z1" (click)="toggleTable()" style="cursor: pointer; display: flex; align-items: center; justify-content: space-between;">
+          <span class="header-text">
+            Daily Requirements
+          </span>
+          <mat-icon>arrow_drop_down</mat-icon>  <!-- Dropdown icon -->
+        </div>
+      </div>
+      <div *ngIf="showTable" style="margin-top:20px;">
         <div class="header mat-elevation-z1">
           <span class="header-text">
             Daily Requirements(Tagged Count) &nbsp;&nbsp;&nbsp;
@@ -2287,8 +2303,15 @@
         </form>
       </div>
     </div>
-
-    <div *ngIf="privilegeServ.hasPrivilege('REQUIREMENTS_TAGGED_DATA')">
+    <div *ngIf="privilegeServ.hasPrivilege('REQUIREMENTS_TAGGED_DATA')" class="col-12 card" style="margin-top:13px;">
+      <div class="header mat-elevation-z1" (click)="toggleTable()" style="cursor: pointer; display: flex; align-items: center; justify-content: space-between;">
+        <span class="header-text">
+          Daily Requirements
+        </span>
+        <mat-icon>arrow_drop_down</mat-icon>  <!-- Dropdown icon -->
+      </div>
+    </div>
+    <div *ngIf="showTable" style="margin-top:20px;">
       <div class="header mat-elevation-z1">
         <span class="header-text">
           Daily Requirements(Tagged Count) &nbsp;&nbsp;&nbsp;
@@ -3095,7 +3118,15 @@
           </mat-card>
         </div>
       </div>
-      <div *ngIf="privilegeServ.hasPrivilege('REQUIREMENTS_TAGGED_DATA')">
+      <div *ngIf="privilegeServ.hasPrivilege('REQUIREMENTS_TAGGED_DATA')" class="col-12 card" style="margin-top:13px;">
+        <div class="header mat-elevation-z1" (click)="toggleTable()" style="cursor: pointer; display: flex; align-items: center; justify-content: space-between;">
+          <span class="header-text">
+            Daily Requirements
+          </span>
+          <mat-icon>arrow_drop_down</mat-icon>  <!-- Dropdown icon -->
+        </div>
+      </div>
+      <div *ngIf="showTable" style="margin-top:20px;">
         <div class="header mat-elevation-z1">
           <span class="header-text">
             Daily Requirements(Tagged Count) &nbsp;&nbsp;&nbsp;
@@ -3265,8 +3296,15 @@
         </form>
       </div>
     </div>
-
-    <div *ngIf="privilegeServ.hasPrivilege('REQUIREMENTS_TAGGED_DATA')">
+    <div *ngIf="privilegeServ.hasPrivilege('REQUIREMENTS_TAGGED_DATA')" class="col-12 card" style="margin-top:13px;">
+      <div class="header mat-elevation-z1" (click)="toggleTable()" style="cursor: pointer; display: flex; align-items: center; justify-content: space-between;">
+        <span class="header-text">
+          Daily Requirements
+        </span>
+        <mat-icon>arrow_drop_down</mat-icon>  <!-- Dropdown icon -->
+      </div>
+    </div>
+    <div *ngIf="showTable" style="margin-top:20px;">
       <div class="header mat-elevation-z1">
         <span class="header-text">
           Daily Requirements(Tagged Count) &nbsp;&nbsp;&nbsp;
@@ -3977,8 +4015,15 @@
         </div>
       </div>
     </div>
-
-    <div *ngIf="privilegeServ.hasPrivilege('REQUIREMENTS_TAGGED_DATA')">
+    <div *ngIf="privilegeServ.hasPrivilege('REQUIREMENTS_TAGGED_DATA')" class="col-12 card" style="margin-top:13px;">
+      <div class="header mat-elevation-z1" (click)="toggleTable()" style="cursor: pointer; display: flex; align-items: center; justify-content: space-between;">
+        <span class="header-text">
+          Daily Requirements
+        </span>
+        <mat-icon>arrow_drop_down</mat-icon>  <!-- Dropdown icon -->
+      </div>
+    </div>
+    <div *ngIf="showTable" style="margin-top:20px;">
       <div class="header mat-elevation-z1">
         <span class="header-text">
           Daily Requirements(Tagged Count) &nbsp;&nbsp;&nbsp;
@@ -4691,8 +4736,15 @@
         </div>
       </div>
     </div>
-
-    <div *ngIf="privilegeServ.hasPrivilege('REQUIREMENTS_TAGGED_DATA')">
+    <div *ngIf="privilegeServ.hasPrivilege('REQUIREMENTS_TAGGED_DATA')" class="col-12 card" style="margin-top:13px;">
+      <div class="header mat-elevation-z1" (click)="toggleTable()" style="cursor: pointer; display: flex; align-items: center; justify-content: space-between;">
+        <span class="header-text">
+          Daily Requirements
+        </span>
+        <mat-icon>arrow_drop_down</mat-icon>  <!-- Dropdown icon -->
+      </div>
+    </div>
+    <div *ngIf="showTable" style="margin-top:20px;">
       <div class="header mat-elevation-z1">
         <span class="header-text">
           Daily Requirements(Tagged Count) &nbsp;&nbsp;&nbsp;
@@ -5303,8 +5355,15 @@
         </div>
       </div>
     </div>
-
-    <div *ngIf="privilegeServ.hasPrivilege('REQUIREMENTS_TAGGED_DATA')">
+    <div *ngIf="privilegeServ.hasPrivilege('REQUIREMENTS_TAGGED_DATA')" class="col-12 card" style="margin-top:13px;">
+      <div class="header mat-elevation-z1" (click)="toggleTable()" style="cursor: pointer; display: flex; align-items: center; justify-content: space-between;">
+        <span class="header-text">
+          Daily Requirements
+        </span>
+        <mat-icon>arrow_drop_down</mat-icon>  <!-- Dropdown icon -->
+      </div>
+    </div>
+    <div *ngIf="showTable" style="margin-top:20px;">
       <div class="header mat-elevation-z1">
         <span class="header-text">
           Daily Requirements(Tagged Count) &nbsp;&nbsp;&nbsp;
@@ -6013,8 +6072,15 @@
         </div>
       </div>
     </div>
-
-    <div *ngIf="privilegeServ.hasPrivilege('REQUIREMENTS_TAGGED_DATA')">
+    <div *ngIf="privilegeServ.hasPrivilege('REQUIREMENTS_TAGGED_DATA')" class="col-12 card" style="margin-top:13px;">
+      <div class="header mat-elevation-z1" (click)="toggleTable()" style="cursor: pointer; display: flex; align-items: center; justify-content: space-between;">
+        <span class="header-text">
+          Daily Requirements
+        </span>
+        <mat-icon>arrow_drop_down</mat-icon>  <!-- Dropdown icon -->
+      </div>
+    </div>
+    <div *ngIf="showTable" style="margin-top:20px;">
       <div class="header mat-elevation-z1">
         <span class="header-text">
           Daily Requirements(Tagged Count) &nbsp;&nbsp;&nbsp;
